# MyProjects

./: .gitignore
ClassificationModel/: main.py
GUI_BOT/GUI_BOT/: BUILD_INSTRUCTIONS.md  gui_bot.py  gui_bot.spec  requirements.txt
LinearRegression/: main.py
MineProd/Minesweeper/: QUICK_START.md  README.md  app.py  run.sh
MineProd/Minesweeper/static/css/: style.css
MineProd/Minesweeper/static/js/: game.js
MineProd/Minesweeper/templates/: index.html
QTC++/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  tabwidget.cpp  tabwidget.h  texteditor.cpp  texteditor.h
TTS/: main.py
TouristManagerBot/: api_services.py  database.py  init_data.py  main.py  sights.db
guiBOT/GUI_BOT/: SUCCESS.md  gui_bot.py
